--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ li:hover a {
 footer {
     background-color: var(--primary-color);
     color: var(--secondary-color);
-    text-align: right;
+    text-align: center;
     margin-left: 0;
     margin-right: 0;
     width: 100%;
